--- a/gb/ncid277_2.md
+++ b/gb/ncid277_2.md
@@ -1,4 +1,8 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/aiaxj298/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aiaxj298/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800036.md#1" target="_blank">中共纪检“内鬼”邱大明泄密收贿细节曝光</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11800036.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/ne5-600x400-150x120.jpg" align ="left"></a>近年来，中共专责打虎的纪检系统频现“内鬼”。日前，吉林省纪委前副书记、省监察委员会前副主任邱大明的贪腐细节曝光，指其泄露工作机密、暗示商人花千万为其在京买房、收受巨额贿赂等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 2:54 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799572.md#1" target="_blank">台举行大选后首次军事操演 以共军为假想敌</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799572.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2001162343142378-150x120.jpg" align ="left"></a>黄历新年将至，中华民国国军官兵落实战备整备的精实战力，海军陆战队1月16日在高雄举行蔡英文总统连任后首次战备操演。国军某旅15日进行陆军备战操演，军方的假想敌是中共共军。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 1:44 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799503.md#1" target="_blank">美海军导弹巡洋舰穿越台湾海峡 今年首次</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799503.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/USS_Shiloh_good_deck_detail_04016702-150x120.jpg" align ="left"></a>台湾国防部表示，周四（1月16日），美国一艘军舰穿越台湾海峡。美国海军也证实了这次行动。这也是美国军舰今年首次在台湾海峡航行。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 11:37 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11799018.md#1" target="_blank">分析：中美协议真正的“紧箍咒”在哪里</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11799018.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/49391652807_ae566def0a_5k-150x120.jpg" align ="left"></a>对国际经贸事务专家来说，华盛顿让北京签下一个带有“牙齿”的双边协议，确实是一件不容易的事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 9:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11799146.md#1" target="_blank">中共签署屈辱条例？网络民间热议</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11799146.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/003-150x120.jpg" align ="left"></a>中美签署协议时，川普总统邀请了200名的美国各界精英见证签字仪式，及世界媒体的直播，也在社交媒体上引起前所未有的反响。尤其是网上的海外华人与翻墙出来的大陆民众讨论热烈空前。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 8:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798856.md#1" target="_blank">咳嗽不停众星躲避 陈家乐声明：不是武汉肺炎</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798856.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/180829052011100311-150x120.jpg" align ="left"></a>港星陈家乐与李靖筠主演的贺岁片16晚在尖沙嘴举行首映，由于他在现场咳嗽不停，吓得同场的周家怡、吴嘉丽、孙慧雪、郭奕芯、林盛斌等一众艺人躲避不及，他尴尬地声明：“我没患有武汉肺炎，只是早前患感冒尚未痊愈。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 7:52 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798667.md#1" target="_blank">《好莱坞往事》大陆撤档 导演昆汀首次回应</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798667.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1199116277-150x120.jpg" align ="left"></a>去年已经上映的美国犯罪片《好莱坞往事》（Once Upon a Time in Hollywood，台译：从前，有个好莱坞）确定在大陆撤档后，导演昆汀·塔伦蒂诺（Quentin Tarantino）1月15日受访时首次作出了回应。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 7:38 AM							</td></tr>
@@ -6,7 +10,6 @@
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798732.md#1" target="_blank">【热点互动】第一阶段协议改变中美贸易模式</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798732.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15ea6d91e96f8955_ttl7daylsJ_9967409557cf7331-150x120.jpg" align ="left"></a>历经两年贸易战，美中周三（1月15日）终于签署第一阶段协议。协议内容包括中方两年内加购2000亿美元美国商品，以及知识产权保护及开放金融的条款。川普总统称这是一份有“全面执行力”的协议。本期节目邀请专家分析协议内容，影响执行的因素，及美中贸易战下一步的走向。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 5:53 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798885.md#1" target="_blank">为吴花燕募捐百万转交两万？医院：没收到</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798885.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/f2416e0c35c13c5bed63693a9d7fbc01-150x120.jpg" align ="left"></a>体重仅43斤的贵州女大学生吴花燕去世，揭开民政部旗下的募捐黑幕，民政部属下机构以吴花燕名义募捐百万，仅转出两万给医院。然而最新的报导显示，医院就连这两万都没有收到。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 4:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798702.md#1" target="_blank">华盛顿加大力度 促台积电在美生产芯片</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798702.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/e58d679d6a9d46a8f54c4ebf9bb07ad3-150x120.jpg" align ="left"></a>消息人士告诉《日经新闻》，为确保高安全性芯片的生产不受中共干扰，华盛顿在加大力度、敦促台积电在美国生产军用芯片。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 3:10 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798622.md#1" target="_blank">【十字路口】中共叫嚷武统台湾 专家解析后果</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798622.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15ea692bbf0d3d25_ttl7dayA5D_20200116-__-DJY___-150x120.jpg" align ="left"></a>台湾大选后的两岸关系又将如何发展？本集节目，让台湾权威学者、国防部智库所长苏紫云告诉您。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 1:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798554.md#1" target="_blank">签署中美贸易协议后首发推 川普说了啥</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798554.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/49390960573_dfd5360f83_k-150x120.jpg" align ="left"></a>美中周三（1月15日）签署中美协议后，川普（特朗普）总统周四（16日）首发推文表示，这是史上最伟大的交易，也是有利于中国及美中长久关系的最佳协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 12:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798177.md#1" target="_blank">第一阶段贸易协议 中方承诺从美方购买稀土</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798177.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6CN-150x120.jpg" align ="left"></a>周三（1月15日），美中双方签署第一阶段贸易协议。作为协议一部分，中方同意从美方购买两种稀土金属。路透社报导，此举可能会促进美国战略性矿产的产能。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 10:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11797707.md#1" target="_blank">中美签署协议?专家：无法改变中美对抗局面</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11797707.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/49391436856_86b0bfda71_k-150x120.jpg" align ="left"></a>中美于美国时间1月15日签署了第一阶段贸易协议，对进入冷战的双方是休战还是关系缓和，很多人并不看好，有专家认为，该协议并没有改变中美对抗的局面，并且协议只占美中对抗中非常小的比例，而且大家也不相信中共会真正落实协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 9:48 PM							</td></tr>
@@ -30,11 +33,8 @@
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11796424.md#1" target="_blank">美中协议解决两大问题 美科技业受益</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11796424.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6CL-150x120.jpg" align ="left"></a>周三（1月15日），美国总统川普（特朗普）与中共副总理刘鹤在白宫签署了第一阶段贸易协议。该协议的有关加强知识产权保护和禁止强迫技术转让的部分将对美国科技业产生重要影响。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 7:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11795392.md#1" target="_blank">中美协议 北京答应加购哪些商品及服务</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11795392.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/49391631367_e06135116c_k-150x120.jpg" align ="left"></a>中美初步贸易协议共计八章，其中最受瞩目的是第六章扩大贸易。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 7:14 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11796118.md#1" target="_blank">为创作自由卖楼拍片 黄子华：拍给香港人看</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11796118.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/10/1403182039111470-150x120.jpg" align ="left"></a>香港艺人黄子华相隔17年再执导筒的贺岁片《乜代宗师》，即将在黄历新年上映，但近日有网民发起罢看，因有指电影为了制作人员的酬金，要改在深圳取景，并非香港人的电影。对此，黄子华解释，因为想自由自在地拍戏，想拍给香港人看，因此不得不卖楼筹措拍摄资金。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 7:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11796241.md#1" target="_blank">伊朗在变天 中共或失去打击美国的王牌</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11796241.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NO30S_refine-150x120.jpg" align ="left"></a>1月11日，伊朗革命卫队航空部队承认8日“误击”客机致使176人惨死，令原本的悼念活动，演变成愈来愈大的国民抗争。首都德黑兰等地一连两天爆发抗争，大学生等群众抗议要求对当权者问责、还遗属公道，甚至喊出“独裁者去死”和要求公投修宪，并冲击宗教领袖哈梅内伊的办公室。网上还出现了“光复伊朗 时代革命”的口号，一场巨变正在伊朗进行。美国利用关税促使中共签订遵守世界贸.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 6:53 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11796276.md#1" target="_blank">美中协议部分解读 执行机制及争端解决</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11796276.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/49391631367_e06135116c_k-150x120.jpg" align ="left"></a>美中周三中午签署贸易协议后，美国贸易代表办公室公布协议英文版本，总计八章，96页。八个章节依序为智慧财产权、技术转让、农业、金融服务、货币、扩大贸易、争端解决，以及最终条款。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 6:43 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11796226.md#1" target="_blank">美中签署第一阶段协议 刘鹤讲话摘要</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11796226.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6AS-150x120.jpg" align ="left"></a>1月15日，美中在白宫举行第一阶段贸易协议签署仪式。中共副总理刘鹤在仪式期间发表讲话，强调协议得来之不易，承诺签署协议后，将会认真落实。刘鹤强调，这份协议内容广泛，无论是对美国还是中国，乃至世界，都有好处。此外，该协议也符合世界贸易组织的规则。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 6:28 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11799448.md#1" target="_blank">中共政治局会议后 地方高层传人事异动</a><br></h3>1月16日，中共举行了今年首次的政治局会议。该会议还循例“研究其他事项”。有港媒报导说，该会议结束后就传出高层人事变动的消息。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 11:22 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11797451.md#1" target="_blank">分析：习今年外访集中在周边的原因</a><br></h3>近年来，习近平密集地连续长时间走访五大洲，而今年其外访大多集中于周边国家。有港媒分析了其外访“不远行”的原因。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 8:24 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11795935.md#1" target="_blank">前央视主播赵普投资酒店 发文请网友免费试住</a><br></h3>四年前从央视辞职的新闻主播赵普，近日在微博发文：“有这么个事，我投资了一些不怎么漂亮的酒店，闲着也是闲着，想请大家免费去睡，又担心报名的人挤爆，万一打起来咋整呢？！”因此，他笑说，要网友给“给支个招”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 6:59 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11795358.md#1" target="_blank">中共涉干预外媒 自由之家吁各国驱逐中共官员</a><br></h3>国际人权组织自由之家（Freedom House）周三（1月15日）敦促各国，在中共宣传、审查和控制新闻内容的能力上升，并正努力扩大其在全球的媒体影响力之际，各国政府应惩罚中国官员，并制定更严格的广电规范。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 5:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid277.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid277_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/aiaxj298/djy/blob/master/gb/ncid277_2.md#1<br><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid277_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/aiaxj298/djy/blob/master/gb/ncid277_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_2.htm">http://www.epochtimes.com/gb/ncid277_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
