--- a/gb/ncid280_4.md
+++ b/gb/ncid280_4.md
@@ -20,6 +20,11 @@
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/31/n11756631.md#1" target="_blank">传武汉爆发SARS疫情 7例病情危重</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/31/n11756631.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/IANTnpj-150x120.jpg" align ="left"></a>湖北武汉市最近公布一则紧急通告，称在当地的海鲜市场陆续出现“不明原因的肺炎”。微博上疯传，武汉疑似爆发非典型肺炎冠状病毒（SARS）群聚感染，已经有7宗感染病例。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 6:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/29/n11752375.md#1" target="_blank">大陆干旱持续数月 江西近33万人饮水困难</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/29/n11752375.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2003/11/311153412938-150x120.jpg" align ="left"></a>数月以来，中国大陆多省持续严重干旱情况。当前，江西南昌市饮用水水源地“幸福水库”的河床裸露干裂。全省有近33万人饮水困难。赣江南昌段近日将出现更低的水位。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 4:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/25/n11745226.md#1" target="_blank">遭病人家属刺颈 北京一医院女医生伤重身亡</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/25/n11745226.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/3ae3a4cb58f224622c32e15a2a07d2a7-e1508124610232-150x120.jpg" align ="left"></a>中国大陆再传严重“医闹”事件。12月24日清晨，北京民航总医院一女医师遭病患家属持刀刺颈，因伤势过重25日去世。目前嫌犯被刑拘。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 12:20 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/3/n11764905.md#1" target="_blank">新年第三天 哈尔滨一公交车辗压死一男子</a><br></h3>1月3日，哈尔滨市一辆公交车将一名男子撞倒辗压。该男子当场死亡。
+
+哈尔滨日报报导，今天（3日）早上8时许，在哈尔滨市道里区群力第一大道与朗江路处，一辆209公交车刚从始发站出来，在转弯时，将一名正在从斑马线上过马路的中年男子撞倒并辗压。
+
+目击者说，该男子约50多岁，当场该男子就不行了，身上盖着蓝布。事后，肇事司机被带走调查，肇事车辆亦被扣押，现场.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 4:10 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/2/n11762740.md#1" target="_blank">扬州大学多名学生感染肺结核 校方压制消息</a><br></h3>近日，多名自称江苏扬州大学的学生在网上爆料，所在学校有学生确诊肺结核。尽管该学校一再压制此消息，但是由于网民的迅速传播，此事件引起网络热议。校方才表示，患者已离开校园。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 10:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/2/n11762556.md#1" target="_blank">曾去过武汉 香港女子疑染肺炎正接受隔离</a><br></h3>湖北武汉市华南海鲜批发市场日前确诊27例不明原因肺炎，其中7人情况危重。香港屯门医院收到来自武汉肺炎怀疑个案，一名曾经到过武汉的女子，日前到屯门医院求医，她有上呼吸道感染征状及发烧，正接受隔离。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 7:33 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/2/n11762140.md#1" target="_blank">元旦黑龙江佳木斯机场起火 有巨大火球升腾</a><br></h3>2020年元旦，黑龙江佳木斯东郊机场发生火灾，现场有巨大火球升腾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 3:52 PM							</td></tr>
@@ -34,6 +39,5 @@
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/26/n11746965.md#1" target="_blank">广东小客车与三轮车相撞又撞树起火 7死2伤</a><br></h3>12月26日上午10时30分左右，广东连州市一辆小型普通客车在丰阳镇湖江村路段，与一辆三轮车相撞。两车碰撞后，该辆小型普通客车再撞上路边树干、并起火，导致7死2伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 8:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/26/n11746918.md#1" target="_blank">今天日偏食 湖北四川发生地震</a><br></h3>12月26日晚间，湖北孝感市应城市发生4.9级地震。武汉、荆州、黄石、襄阳、河南信阳等多地有明显震感。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 8:18 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/26/n11746539.md#1" target="_blank">中国多省进入流感流行期 甲型流感为主</a><br></h3>近期，中国大陆部分省份已进入流感流行季节。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 5:04 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/12/25/n11744109.md#1" target="_blank">重庆男子坠楼砸中2女中学生 3人均死亡</a><br></h3>12月24日晚，重庆沙坪坝区一男子在三峡广场煌华新纪元购物广场坠亡，砸倒两名过路人，3人均死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 12:58 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid280_3.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid280_3.md#1">3</a>&nbsp;&nbsp;4&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid280_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid280_5.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/aiaxj298/djy/blob/master/gb/ncid280_4.md#1<br><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncid280_4.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/aiaxj298/djy/blob/master/gb/ncid280_4.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_4.htm">http://www.epochtimes.com/gb/ncid280_4.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
