--- a/gb/nsc413_4.md
+++ b/gb/nsc413_4.md
@@ -1,4 +1,11 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/aiaxj298/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/aiaxj298/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/aiaxj298/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/aiaxj298/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/aiaxj298/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/aiaxj298/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798918.md#1" target="_blank">出师不利 东莞首家在港上市房企盘中跌10%</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798918.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/02/12343789-150x120.jpg" align ="left"></a>汇景控股有限公司（汇景控股）在港交所上市首日，盘中一度大跌10%。汇景控股是在认购量不足、负债率高的情况下在港上市，引发市场争议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 7:36 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798666.md#1" target="_blank">武汉新冠状病毒再增死亡病例 网民冒险爆料</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798666.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1193183155-150x120.jpg" align ="left"></a>在越南、泰国、日本相继出现武汉新型冠状病毒感染确诊病例后，武汉深夜宣布新增一例死亡病例，但无新增病例。不过武汉网友爆料，自己父亲患病毒性肺炎，几经周折才送至金银潭医院，但自己和母亲也患上同样的症状，消息很快被删除。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 6:46 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11799058.md#1" target="_blank">美国紧逼中共 贸易协议北京大让步内幕</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11799058.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6KR-2-150x120.jpg" align ="left"></a>中美贸易协议终于签了！对于中共来说，签协议是死，不签协议也是死。川普马上要到北京，与习近平谈第二阶段协议，将直接点到中共极权经济的死穴。而美国“醉翁之意不在酒”，美国不只是想在贸易上获得公平，而是要全面对抗中共的崛起，要彻底遏制共产主义对全世界的渗透。美国现在所做的一切，都是天灭中共的具体体现。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 6:29 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798787.md#1" target="_blank">【新闻看点】川普数落中共贸易不公 刘鹤尴尬</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798787.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6BP-600x400-1-150x120.jpg" align ="left"></a>昨天在白宫东厅，在满屋子的人员见证下，川普发表了半个多小时的讲话。他历数了中共的种种不公平贸易行为，使中方官员表情相当尴尬。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 5:57 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798303.md#1" target="_blank">陕西男子失踪21年 知情人：油企打死多人</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798303.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/5995acf5ly1ganrof4pkyj20u014otc7-1-150x120.jpg" align ="left"></a>陕西延安宝塔区村民刘志斌因为向势力强大的采油厂索取占地赔偿，于21年前被乡政府官员绑走，从此人间蒸发；日前当局成立专案组调查；但知情人指出，结果并不乐观。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 5:54 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798732.md#1" target="_blank">【热点互动】第一阶段协议改变中美贸易模式</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798732.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15ea6d91e96f8955_ttl7daylsJ_9967409557cf7331-150x120.jpg" align ="left"></a>历经两年贸易战，美中周三（1月15日）终于签署第一阶段协议。协议内容包括中方两年内加购2000亿美元美国商品，以及知识产权保护及开放金融的条款。川普总统称这是一份有“全面执行力”的协议。本期节目邀请专家分析协议内容，影响执行的因素，及美中贸易战下一步的走向。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 5:53 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798885.md#1" target="_blank">为吴花燕募捐百万转交两万？医院：没收到</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798885.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/f2416e0c35c13c5bed63693a9d7fbc01-150x120.jpg" align ="left"></a>体重仅43斤的贵州女大学生吴花燕去世，揭开民政部旗下的募捐黑幕，民政部属下机构以吴花燕名义募捐百万，仅转出两万给医院。然而最新的报导显示，医院就连这两万都没有收到。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 4:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11797867.md#1" target="_blank">2019年 遭中共迫害的社会精英人士</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11797867.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/11-5-150x120.jpg" align ="left"></a>据明慧网信息统计，2019年至少21名修炼法轮功的社会精英被迫害致死，45人被非法判刑，42人被非法庭审，132人被绑架，72人被骚扰。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 3:42 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798702.md#1" target="_blank">华盛顿加大力度 促台积电在美生产芯片</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798702.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/e58d679d6a9d46a8f54c4ebf9bb07ad3-150x120.jpg" align ="left"></a>消息人士告诉《日经新闻》，为确保高安全性芯片的生产不受中共干扰，华盛顿在加大力度、敦促台积电在美国生产军用芯片。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 3:10 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798641.md#1" target="_blank">大陆用电减少 央企预测经济增速5年降至4%</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798641.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/06/1806300353112378-150x120.jpg" align ="left"></a>中共央企“国家电网”子公司持续亏损，投资大幅下降，该公司内部预测，五年后大陆经济增速可能下滑至4%。目前，被视为大陆经济风向标的社会用电量正在下降。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 2:41 AM							</td></tr>
@@ -6,7 +13,6 @@
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798501.md#1" target="_blank">中美贸易协议签署 中英文版本内容这里看</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798501.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/49391652592_c88146f36f_k-150x120.jpg" align ="left"></a>1月15日，美中签署历史性第一阶段贸易协议，历时18个多月的贸易战暂时停火，并为下一步达成更广泛协议谈判奠定基础。但协议的执行和落实则是未来外界关注的焦点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 1:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11795369.md#1" target="_blank">参与迫害法轮功 2019年529人被曝遭厄运</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11795369.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2020-1-13-mh-ebao-2019-1-150x120.png" align ="left"></a>明慧网报导，2019年有529名中共人员遭厄运，他们来自社会各个阶层、各个部门，尤其是公检法司系统，均紧随中共江泽民集团参与迫害法轮功。其遭厄运形式为自杀、死亡、重病、伤残、被查处等等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 1:30 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798118.md#1" target="_blank">上海两会 访民到举报点投递材料 多人被抓</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798118.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/6216100bf78f0490ad64bca70c8107d1-150x120.jpg" align ="left"></a>上海两会于14日召开，许多访民到市政府设立的接收举报控告投诉材料点投递材料时被抓。警方在会场附近备有大巴车，访民被抓后统一送至府村路救助站再向各地分流。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 1:17 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798622.md#1" target="_blank">【十字路口】中共叫嚷武统台湾 专家解析后果（上）</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798622.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15ea692bbf0d3d25_ttl7dayA5D_20200116-__-DJY___-150x120.jpg" align ="left"></a>台湾大选后的两岸关系又将如何发展？本集节目，让台湾权威学者、国防部智库所长苏紫云告诉您。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 1:06 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798554.md#1" target="_blank">签署中美贸易协议后首发推 川普说了啥</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798554.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/49390960573_dfd5360f83_k-150x120.jpg" align ="left"></a>美中周三（1月15日）签署中美协议后，川普（特朗普）总统周四（16日）首发推文表示，这是史上最伟大的交易，也是有利于中国及美中长久关系的最佳协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 12:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798177.md#1" target="_blank">第一阶段贸易协议 中方承诺从美方购买稀土</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798177.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6CN-150x120.jpg" align ="left"></a>周三（1月15日），美中双方签署第一阶段贸易协议。作为协议一部分，中方同意从美方购买两种稀土金属。路透社报导，此举可能会促进美国战略性矿产的产能。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 10:27 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11797707.md#1" target="_blank">中美签署协议?专家：无法改变中美对抗局面</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11797707.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/49391436856_86b0bfda71_k-150x120.jpg" align ="left"></a>中美于美国时间1月15日签署了第一阶段贸易协议，对进入冷战的双方是休战还是关系缓和，很多人并不看好，有专家认为，该协议并没有改变中美对抗的局面，并且协议只占美中对抗中非常小的比例，而且大家也不相信中共会真正落实协议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 9:48 PM							</td></tr>
@@ -23,16 +29,6 @@
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796832.md#1" target="_blank">前川普经济顾问：美国从贸协中获得啥？</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796832.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/EpochTimes-9A6A6916-600x400-150x120.jpg" align ="left"></a>前川普（特朗普）团队经济顾问史蒂夫·摩尔（Steve Moore）周三（1月15日）在白宫接受大纪元采访，他表示，第一阶段贸易协议是美国的一个巨大胜利。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 2:38 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796541.md#1" target="_blank">【拍案惊奇】首阶段贸易协议 中美各让步什么？</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796541.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15ea37447f82a531_ttl7daysRc_tn0115_-150x120.jpg" align ="left"></a>1月15日，在美国白宫，美国总统川普和中国副总理刘鹤，共同签署了美中第一阶段贸易协议。舆论普遍公认，第一阶段贸易协议是川普的胜利。就连对川普十分苛刻的《纽约时报》，也这么说。下面，我们先来了解，为什么说是川普的胜利，以及第一阶段贸易协议都包含哪些内容。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 1:21 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796761.md#1" target="_blank">阻房价下跌 四川达州买楼“送钱”</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796761.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/a9317ab93314058a4688a54777701778-150x120.jpg" align ="left"></a>中国楼市持续处于低迷状态，各省地方政府用尽一切办法，阻止房价下滑，有地方政府鼓励年轻人取得当地户籍，增加住房需求。四川省达州市就更直接，向买房者发放现金补贴，这种方法可以有效阻止房价滑落么?......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 12:23 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796747.md#1" target="_blank">对抗网军假消息 前北约官员：台湾是好例子</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796747.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2001152148552378-150x120.jpg" align ="left"></a>前北约秘书长拉斯穆森昨天参与印度瑞辛纳对话座谈，会上讨论民主国家面临境外网军散布假消息影响选举的挑战，他提到总统大选、反渗透法，说台湾是对抗外国网军的好例子，能鼓舞其他国家。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 12:20 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11794395.md#1" target="_blank">大陆路面为何频频发生塌陷事件</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/15/n11794395.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/6-3-150x120.png" align ="left"></a>继广州地铁施工区地面塌陷后一个月，青海省西宁市路面又发生塌陷，一辆公交车坠入塌陷坑内，造成9人死亡、10人失踪。路面频发塌陷引发民众担忧。那么，造成大陆道路塌陷的原因是什么？塌陷为何频频发生？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 12:18 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796525.md#1" target="_blank">中共巨额购买承诺太惊人 分析师：恐难兑现</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796525.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1142701434-150x120.jpg" align ="left"></a>美中1月15日签署了第一阶段贸易协议，中共承诺两年内增购2000亿美元的美国商品，但相关专家认为，中共很难兑现承诺，或成为空头支票。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 12:15 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796694.md#1" target="_blank">中美贸易协议解读 金融服务领域八大要点</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796694.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/49391436856_86b0bfda71_k-150x120.jpg" align ="left"></a>1月15日，美国总统川普和中共副总理刘鹤在白宫签署美中第一阶段贸易协议。该协议涵盖八章，涉及知识产权、技术转让、金融服务、购买美国商品、执行机制等多个方面。而在金融服务领域，该协议有八大要点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 11:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796563.md#1" target="_blank">央视前主持人赵忠祥患癌在北京去世</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796563.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/70dd886e043bd4c5424ea5efc602d387-150x120.jpg" align ="left"></a>1月16日，中共央视前主持人赵忠祥因患癌症在北京去世，终年78岁。
-
-上述消息是赵忠祥的儿子赵方发文向外界透露的。赵方表示，其父于16日7:30因病在京去世。其父于2019年底感到身体不适，就医检查，发现身患癌症，已经扩散。他去世这一天，正好是他的78岁生日。
-
-“他是肺癌。”赵忠祥的好友魏明伦对红星新闻表示，赵忠祥生前极少去医院，去年10月摔倒后.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 10:01 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796609.md#1" target="_blank">中美贸易协议九大重点 中共让步多于美国</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796609.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6KR-150x120.jpg" align ="left"></a>备受瞩目的美中经贸协定（Economic and Trade Agreement）涵盖八章，含附件总计96页。在本协定中，北京做出的承诺多于美方，总共有九大重点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 9:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11798549.md#1" target="_blank">原北京师范大学研究生陶渊  陷冤狱遭迫害</a><br></h3>原北京师范大学研究生、法轮功学员陶渊于2014年4月29日在浙江嘉兴市上班途中被嘉兴市经开区公安局非法抓捕，后被非法判刑4年，在浙江省第四监狱医院监区严管分监区遭受残忍迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 3:03 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11797365.md#1" target="_blank">孙文斌杀女医生不足一月 法院迅速判处死刑</a><br></h3>今天（1月16日），杀害北京市朝阳区民航总医院女医生杨文的凶手孙文斌被判处死刑。上月24日，病人家属孙文斌用刀割喉杀死杨文。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 4:22 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11796950.md#1" target="_blank">深圳一学校强收午托费 家长提诉求被威胁</a><br></h3>近期，多位深圳华胜实验学校一年级孩子的家长表示，该校强制收取3300元的午餐午托费用，然而，午餐伙食并不好。今天（1月16日）深圳市宝安区教育局发通报要求学校午餐午休服务遵守自愿原则。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 2:59 PM							</td></tr>
